# chess

frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/auth/: auth.service.ts
frontend/src/app/auth/dto/: auth-response.ts  refresh-request.ts
frontend/src/app/auth/modal-login/: modal-login.component.css  modal-login.component.ts
frontend/src/app/auth/modal-register/: modal-register.component.ts
frontend/src/app/board/: field.pipe.ts  websocket.service.ts
frontend/src/app/board/board/: board.component.css  board.component.html  board.component.ts
frontend/src/app/board/dto/: board-event.ts  board-message.ts  castling.ts  chat-event.ts  chat-message.ts  chat-request.ts  field.ts  move-message.ts  move-request.ts  move.ts  piece.ts
frontend/src/app/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/elements/: toast.service.ts
frontend/src/app/error/: error.interceptor.ts
frontend/src/app/main/: game-management.service.ts
game/: pom.xml
game-engine/: Cargo.toml
game-engine/src/: config.rs  main.rs
game-engine/src/engine/: mod.rs  random_engine.rs  rules.rs
game-engine/src/rabbit/: ai_consumer.rs  mod.rs  move_consumer.rs
game/src/main/resources/: application-dev.properties
gateway/: pom.xml
gateway/src/main/resources/: application.yaml
main/: pom.xml
main/src/main/resources/: application-dev.properties
(+130 files in other folders)
